# EmbeddedHelperLibrary

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  appveyor.yml  format-all.sh  library.properties
Unity/: CMakeLists.txt  unity_cpp.h
Unity/auto/: find_files.rb  generate_fixture_runner.rb
code_size_tests/: code_size_add_T.include  code_size_add_int.cpp  code_size_add_safe_type.cpp  code_size_copy_T_collection.include  code_size_copy_int_collection.cpp  code_size_copy_safe_type_collection.cpp  compile.sh  meld_add_T.sh  meld_copy_T_collection.sh  safe_int.h
doc/: safe_type.md
include/ehl/: algorithm.h  crtp.h  exponential_smoothing.h  fast_exponential_smoothing.h  linear_interpolator.h  safe_type.h  span.h
include/ehl/meta/: metaarray.h  metastring.h  number_to_string.h
include/ehl/type_traits/: declval.h  detection_idiom.h  enable_if.h  integral_constant.h  is_container.h  is_type_base.h  rank.h  remove_cv.h  size_type_t.h  type_if.h  (+2 more)
src/: CMakeLists.txt
src/ehl/: algorithm.h  as_rvalue.h  crtp.h  either.h  events.h  exponential_smoothing.h  fast_exponential_smoothing.h  isr_circular_buffer.h  isr_read_variable.h  isr_written_variable.h  linear_interpolator.h  optional.h  rolling_average.h  rolling_average_with_event.h  rvalue.h  safe_type.h  span.h
tests/: CMakeLists.txt  either.tests.cpp  events.tests.cpp  exponential_smoothing.tests.cpp  fast_exponential_smoothing.tests.cpp  isr_circular_buffer.tests.cpp  isr_read_variable.tests.cpp  isr_written_variable.tests.cpp  linear_interpolator.tests.cpp  main.cpp  optional.tests.cpp  recorded_operations.cpp  recorded_operations.h  rolling_average.tests.cpp  rolling_average_with_events.tests.cpp  safe_type.tests.cpp  span.tests.cpp  tests.all.cpp
tests/meta/: literal_parser.tests.cpp  metafunctions.tests.cpp
tests/type_traits/: copy_assign_t.tests.cpp  detection_compiler_generated_methods.test_types.cpp  detection_compiler_generated_methods.test_types.h  detection_idiom.tests.cpp  is_container.tests.cpp  size_type_t.tests.cpp
(+25 files in other folders)
